# weakch

./: .gitignore  CMakeLists.txt  README.md
scripts/: apply_order.rb  create_dist_metric.rb  experiments.rb  gr_to_graph.rb  grid.rb  metis_extractor.rb  simplify.rb  undirect.rb
src/: chranks.cpp
src/contraction/: contraction.cpp  contraction.h  graph.h  macro.cpp  undirected_contraction.cpp  undirected_graph.h
src/customization/: builder.cpp  delta.cpp  macro_customization.cpp  macro_customization.h  slow_customization.cpp
src/query/: ch_query.h  dijkstra.h  graph.h  query.cpp  weakch_query.h
src/util/: cast.h  io.h  random.h  split.h  timer.h  vector_utils.h
